--- a/client/reddit/r.jade
+++ b/client/reddit/r.jade
@@ -4,12 +4,12 @@ template(name='reddit')
             .four.wide.column
                 +cloud filter='subreddit'
             .twelve.wide.column
+                .ui.inline.header #{sub_count}
                 .ui.inline.header
                     i.reddit.icon
-                    |reddit
-                .ui.inline.header.search_subs
-                    |#{subreddit_docs.count} subs
-                .ui.inline.header #{sub_count}
+                    |subreddits
+                // .ui.inline.header.search_subs
+                //     |#{subreddit_docs.count} subs
                 .ui.icon.input
                     i.search.icon
                     input.search_subreddits(type='text')
