--- a/client/reddit/ruser.jade
+++ b/client/reddit/ruser.jade
@@ -103,7 +103,7 @@ template(name='ruser_post')
             span.rounded.full
                 |!{embed}
             div
-        else if data.is_image
+        else if data.is_reddit_media_domain
             a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                 img.ui.fluid.rounded.zoomer.image.toggle_view(src=data.url)
         else if watson.metadata.image.length
