--- a/client/reddit/r.jade
+++ b/client/reddit/r.jade
@@ -2,7 +2,17 @@ template(name='reddit')
     .ui.stackable.padded.grid
         .row
             .four.wide.column
-                +cloud filter='subreddit'
+                // +cloud filter='subreddit'
+                if selected_sub_tags
+                    // if many_tags
+                    //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
+                    //         i.remove.icon
+                    each selected_sub_tags
+                        +sub_unselect_tag
+                each subreddit_tags
+                    // .ui.label #{this}
+                    +sub_tag_selector
+                    // .ui.large.label(title=count) #{name}
             .twelve.wide.column
                 .ui.inline.header #{sub_count}
                 .ui.inline.header
@@ -14,7 +24,7 @@ template(name='reddit')
                     i.search.icon
                     input.search_subreddits(type='text')
                 +skve k='sort_subs' v='subscribers' l='subscribers' i='users'
-                +skve k='sort_subs' v='name' l='name' i='title'
+                +skve k='sort_subs' v='name' l='name' i='title'             
                 .scrolling
                     unless subreddit_docs.count
                         .ui.center.aligned.basic.segment
@@ -28,7 +38,7 @@ template(name='subreddit_doc')
         // a.ui.tiny.image.goto_sub(href="/r/#{data.display_name}")
         .four.wide.column.goto_sub.seg
             img.ui.rounded.zoomer.image(src=data.icon_img)
-        .twelve.wide.column.say.seg
+        .twelve.wide.column.seg
             a.ui.header.goto_sub(href="/r/#{data.display_name}")
                 img.ui.rounded.zoomer.image(src=data.header_img)
                 | !{data.title} 
