ruser tag updates

--- a/client/reddit/ruser.jade
+++ b/client/reddit/ruser.jade
@@ -41,7 +41,7 @@ template(name='ruser')
                     +print_this
                     +ruser_top_emotions     
                     each tags
-                        .ui.label #{this}
+                        .ui.compact.button.search_tag #{this}
                 .six.wide.column
                     // if selected_ruser_post_tags
                     //     each selected_ruser_post_tags
