--- a/client/reddit/rusers.jade
+++ b/client/reddit/rusers.jade
@@ -89,8 +89,8 @@ template(name='ruser_small')
                 // .ui.circular.compact.basic.button.set_location
                 //     i.grey.marker.icon
                 //     |!{location}
-                each seven_tags
-                    .ui.small.tertiary.button.add_tag #{this}
+                each ten_tags
+                    .ui.small.compact.tertiary.button.add_tag #{this}
                 if user_top_emotion
                     .ui.inline.header #{user_top_emotion}
                 +ruser_top_emotion_small
