v1 subs detail toggle

--- a/client/reddit/rpage.jade
+++ b/client/reddit/rpage.jade
@@ -1,6 +1,6 @@
 template(name='reddit_page')
     with current_doc
-        .ui.stackable.padded.grid
+        .ui.stackable.grid
             .twelve.wide.column
                 a.ui.basic.button.goto_sub(href="/r/#{data.subreddit}")
                     i.chevron.left.icon
