--- a/client/reddit/rpage.jade
+++ b/client/reddit/rpage.jade
@@ -12,7 +12,7 @@ template(name='reddit_page')
                 .ui.basic.button.get_post permalink #{permalink}
                 div
                 +skve k='view_section' v='main' l='main' i='content'
-                +skve k='view_section' v='comments' l='comments' i='comment'
+                // +skve k='view_section' v='comments' l='comments' i='comment'
                 +skve k='view_section' v='watson' l='watson' i='dna'
                 if tone
                     +skve k='view_section' v='tone' l='tone' i='smile grey'
