--- a/lib/blocks.jade
+++ b/lib/blocks.jade
@@ -22,8 +22,7 @@ template(name='user_button')
 
 
 template(name='print_this')
-    .ui.icon.basic.button.print_this
-        i.orange.code.icon
+    i.orange.code.link.icon.print_this
 
 template(name='session_boolean_toggle')
     .ui.compact.button.toggle_session_key(class=calculated_class)
