--- a/client/reddit/ruser.jade
+++ b/client/reddit/ruser.jade
@@ -13,14 +13,14 @@ template(name='ruser')
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
-                    img.ui.image(src=data.snoovatar_img)
+                    img.ui.small.image(src=data.snoovatar_img)
                     .ui.large.inline.header.get_user_posts(class=post_header_class)
                         |!{username} 
                         small(title='reputation') {{ commafy karma }}
                         // strong(title="#{site} rank") ##{site_rank} 
                         strong(title='global rank') ##{global_rank}
                     with data
-                        .ui.list
+                        .ui.small.list
                             .item #{total_karma} total karma
                             .item #{comment_karma} comment karma
                             .item #{link_karma} link karma
@@ -33,15 +33,20 @@ template(name='ruser')
                             i.large.blue.shield.icon(title='is mod')
                         if has_verified_email
                             i.large.mail.icon(title='verified email')
-                    i.info.icon.get_user_info
+                    // i.info.icon.get_user_info
                     img.ui.rounded.inline.image.pointer.zoomer(src=profile_image)
-                    a.ui.large.compact.basic.button(href="http://www.reddit.com/user/#{username}" target='_window' title="#{site} profile")
+                    a.ui.compact.basic.icon.button(href="http://www.reddit.com/user/#{username}" target='_window' title="#{site} profile")
                         i.reddit.icon
                         i.external.icon
-                    +print_this
-                    +ruser_top_emotions     
+                    if in_dev
+                        +print_this
+                    +ruser_top_emotions
+                    div
+                    .ui.small.inline.header 
+                        i.tag.icon
+                        |top tags
                     each tags
-                        .ui.compact.basic.circular.button.search_tag #{this}
+                        .ui.compact.basic.button.search_tag #{this}
                 .six.wide.column
                     // if selected_ruser_post_tags
                     //     each selected_ruser_post_tags
@@ -71,31 +76,39 @@ template(name='ruser')
                     .scrolling
                         each rcomments
                             +ruser_comment
-                            .ui.divider
+                            // .ui.divider
                     
                     
                     
 template(name='ruser_top_emotions')
-    .ui.basic.label {{ to_percent avg_sent_score}} sentiment
-    .ui.green.basic.large.label
-        | {{ to_percent avg_joy_score}}% joyful
-        | {{fixed0 rep_joy}} ##{global_joy_rep_rank}
-
-    .ui.blue.basic.large.label
+    .ui.header(title='rep is % x karma')
+        i.smile.grey.icon
+        |emotional averages
+    .ui.small.inline.header {{ to_percent avg_sent_score}}% sentiment
+    div
+    .ui.green.small.inline.header
+        | {{ to_percent avg_joy_score}}% joyful avg
+        | {{fixed0 rep_joy}} rep ##{global_joy_rep_rank} rank
+    div
+    .ui.blue.small.inline.header
+        | {{ to_percent avg_sadness_score}}% sad avg
         |{{fixed0 rep_sadness}} sad rep
-        | {{ to_percent avg_sadness_score}}% ##{global_sadness_rep_rank}
-
-    .ui.red.basic.large.label 
-        | {{ to_percent avg_anger_score}}% angry
-        | {{fixed0 rep_anger}} rep ##{global_anger_rep_rank}
-
-    .ui.orange.basic.large.label
+        |##{global_sadness_rep_rank} rank
+    div
+    .ui.red.small.inline.header 
+        | {{ to_percent avg_anger_score}}% angry avg
+        | {{fixed0 rep_anger}} rep 
+        |##{global_anger_rep_rank} rank
+    div
+    .ui.orange.small.inline.header
+        | {{ to_percent avg_disgust_score}}% disgust avg
         |{{fixed0 rep_disgust}} disgust rep
-        | {{ to_percent avg_disgust_score}}% ##{global_disgust_rep_rank}
-
-    .ui.grey.basic.large.label
+        |##{global_disgust_rep_rank} rank
+    div
+    .ui.grey.small.inline.header
+        | {{ to_percent avg_fear_score}}% fear avg
         |{{fixed0 rep_fear}} fear rep
-        | {{ to_percent avg_fear_score}}% ##{global_fear_rep_rank}
+        |##{global_fear_rep_rank} rank
 
                     
                                 
@@ -126,8 +139,9 @@ template(name='ruser_post')
         // if skv_is 'view_preview' 'preview'
         |#{data.body}
         .ui.label {{ufrom data.created}}
-        +print_this
-    .ui.divider                 
+        if in_dev
+            +print_this
+    // .ui.divider                 
                             
 template(name='ruser_doc_item')
     .ui.item
