--- a/client/reddit/rusers.jade
+++ b/client/reddit/rusers.jade
@@ -111,23 +111,23 @@ template(name='ruser_karma_sort_button')
             
 template(name='ruser_top_emotion_small')
     .ui.basic.label {{ to_percent avg_sent_score}} sentiment
-    .ui.green.small.label
+    .ui.green.small.basic.label
         | {{ to_percent avg_joy_score}}% joy
         | {{fixed0 rep_joy}} ##{global_joy_rep_rank}
 
-    .ui.blue.small.label
+    .ui.blue.small.basic.label
         |{{fixed0 rep_sadness}} sad
         | {{ to_percent avg_sadness_score}}% ##{global_sadness_rep_rank}
 
-    .ui.red.small.label 
+    .ui.red.small.basic.label 
         | {{ to_percent avg_anger_score}}% anger
         | {{fixed0 rep_anger}} rep ##{global_anger_rep_rank}
 
-    .ui.orange.small.label
+    .ui.orange.small.basic.label
         |{{fixed0 rep_disgust}} disgust
         | {{ to_percent avg_disgust_score}}% ##{global_disgust_rep_rank}
 
-    .ui.grey.small.label
+    .ui.grey.small.basic.label
         |{{fixed0 rep_fear}} fear
         | {{ to_percent avg_fear_score}}% ##{global_fear_rep_rank}
                 
